Search Bar Update
Updated it so if you search something it wil filter the rest out. It's not done yet. I need to id all the author , titles in the book blocks so the that is also searchable

--- a/index.html
+++ b/index.html
@@ -4,19 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Book Reviews</title>
-	<style>
-		body { font-family: Arial, sans-serif; }
-		header { display: flex; justify-content: space-between; align-items: center; padding: 20px; background-color: #f0f0f0; }
-		nav a { margin: 0 10px; text-decoration: none; color: #333; }
-		.search-bar { padding: 5px; }
-		.gallery { display: flex; flex-wrap: wrap; justify-content: space-around; padding: 20px; }
-		.book { width: 30%; box-shadow: 0 0 10px #ccc; margin-bottom: 20px; padding: 10px; cursor: pointer; }
-		.book img { width: 100%; }
-	</style>
 </head>
 <body>
 		<script src="script.js" defer></script>
-	<link src="style.css" rel="stylesheet">
+	<link href="style.css" rel="stylesheet">
 
 	<header>
 		<nav>
@@ -36,6 +27,11 @@
 					<p>Author: Arthur Conan Doyle</p>
 					<p>Reviewed by: John Doe</p>
 					<p>Pages: 350</p>
+					<p>Year Written: 1892</p>
+					<p>Publisher: /</p>
+					<p>Genre: Mystery</p>
+					<p>ISBN: 978-3-16-148410-0</p>
+					
 				</div>
 			</div>
 			<!-- Dan Brown's Inferno Book -->
