--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 			<div class="book" data-book="sholms" onclick="redirectToBookPage(this)">
 				<img src="sherlock-holmes-cover.jpg" alt="Sherlock Holmes">
 				<div class="book-info">
-					<h3>Sherlock Holmes</h3>
-					<p>★★★★★</p>
-					<p>Author: Arthur Conan Doyle</p>
-					<p>Reviewed by: John Doe</p>
-					<p>Pages: 350</p>
-					<p>Year Written: 1892</p>
-					<p>Publisher: /</p>
-					<p>Genre: Mystery</p>
-					<p>ISBN: 978-3-16-148410-0</p>
+					<h3 class="title">Sherlock Holmes</h3>
+					<p class="rating">★★★★★</p>
+					<p class="author">Author: Arthur Conan Doyle</p>
+					<p class="reviewer">Reviewed by: John Doe</p>
+					<p class="pages">Pages: 350</p>
+					<p class="yearwritten">Year Written: 1892</p>
+					<p class="publisher">Publisher: /</p>
+					<p class="genre">Genre: Mystery</p>
+					<p class="isbn">ISBN: 978-3-16-148410-0</p>
 					
 				</div>
 			</div>
@@ -38,24 +38,34 @@
 			<div class="book" data-book="inferno" onclick="redirectToBookPage(this)">
 				<img src="dan-brown-inferno-cover.jpg" alt="Inferno">
 				<div class="book-info">
-					<h3>Inferno</h3>
-					<p>★★★★☆</p>
-					<p>Author: Dan Brown</p>
-					<p>Reviewed by: Jane Doe</p>
-					<p>Pages: 480</p>
+					<h3 class="title">Inferno</h3>
+					<p class="rating">★★★★☆</p>
+					<p class="author">Author: Dan Brown</p>
+					<p class="reviewer">Reviewed by: Jane Doe</p>
+					<p class="pages">Pages: 480</p>
+					<p class="yearwritten">Year Written: 2013</p>
+					<p class="publisher">Publisher: Doubleday</p>
+					<p class="genre">Genre: Mystery</p>
+					<p class="isbn">ISBN: 978-0-385-53785-8</p>
 				</div>
 			</div>
-			<!-- Dan Brown's Inferno Book -->
-			<div class="book" data-book="inferno" onclick="redirectToBookPage(this)">
-				<img src="dan-brown-inferno-cover.jpg" alt="Inferno">
+		<!-- 				Example Book
+			<div class="book" data-book="BOOKNAME(pagename)" onclick="redirectToBookPage(this)">
+				<img src="EXAMPLE.jpg" alt="IMG NAME">
 				<div class="book-info">
-					<h3>Inferno</h3>
-					<p>★★★★☆</p>
-					<p>Author: Dan Brown</p>
-					<p>Reviewed by: Jane Doe</p>
-					<p>Pages: 480</p>
+					<h3 class="title">TITLE</h3>
+					<p class="rating">★★★★★</p>
+					<p class="author">Author: John Doe</p>
+					<p class="reviewer">Reviewed by: John Doe</p>
+					<p class="pages">Pages: 999</p>
+					<p class="yearwritten">Year Written: 9999</p>
+					<p class="publisher">Publisher: PUBLISHER</p>
+					<p class="genre">Genre: GENRE</p>
+					<p class="isbn">ISBN: 123-3-45-678-9</p>
+					
 				</div>
 			</div>
+		-->
 		</div>
 	</main>
 </body>
