Added a review page (inferno)
With a header, footer review text and a wikipedia like overview box

--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Book Reviews</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 		<script src="script.js" defer></script>
-	<link href="style.css" rel="stylesheet">
-
 	<header>
 		<nav>
-			<a href="index.html">Home</a> | 
+			<a href="/index.html">Home</a> | 
 			<a href="me.html">About Me</a>
 		</nav>
 		<input class="search-bar" type="search" placeholder="Search...">
@@ -36,7 +35,7 @@
 			</div>
 			<!-- Dan Brown's Inferno Book -->
 			<div class="book" data-book="inferno" onclick="redirectToBookPage(this)">
-				<img src="dan-brown-inferno-cover.jpg" alt="Inferno">
+				<img src="./BookReviews/Inferno/infernobookcovertest.png" alt="InfernoBookCover">
 				<div class="book-info">
 					<h3 class="title">Inferno</h3>
 					<p class="rating">★★★★☆</p>
@@ -68,5 +67,11 @@
 		-->
 		</div>
 	</main>
+<footer>
+	<div class="footer-content">
+		<p>Contact Us: info@kluizenaren.com</p>
+		<p>© 2024 Kluizenaren All rights reserved.</p>
+	</div>
+</footer>
 </body>
 </html>
