--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script src="script.js" defer></script>
 	<header>
 		<nav>
-			<a href="/index.html">Home</a> | 
+			<a href="./index.html">Home</a> | 
 			<a href="me.html">About Me</a>
 		</nav>
 		<input class="search-bar" type="search" placeholder="Search...">
