Author Page+ Author Section + Tags
Added a author page a author section on the review page that tells the user about the author and if you click on it it redirects the user to the author page. Also added tags but they aren't searchable yet

--- a/BookReviews/Inferno/inferno.html
+++ b/BookReviews/Inferno/inferno.html
@@ -25,17 +25,28 @@
 			</div>
 			<div class="book-details-box">
 				<!-- Existing book details go here -->
-				 	<img src="./infernobookcovertest.png" alt="InfernoBookCover"></img>
-					<h3 class="title">Inferno</h3>
-					<p class="rating">★★★★☆</p>
-					<p class="author">Author: Dan Brown</p>
-					<p class="reviewer">Reviewed by: Jane Doe</p>
-					<p class="pages">Pages: 480</p>
-					<p class="yearwritten">Year Written: 2013</p>
-					<p class="publisher">Publisher: Doubleday</p>
-					<p class="genre">Genre: Mystery</p>
-					<p class="isbn">ISBN: 978-0-385-53785-8</p>
-					<p class="tags">#DanBrown</p>
+				<img src="./infernobookcovertest.png" alt="InfernoBookCover"></img>
+				<h3 class="title">Inferno</h3>
+				<p class="rating">★★★★☆</p>
+				<p class="author">Author: Dan Brown</p>
+				<p class="reviewer">Reviewed by: Jane Doe</p>
+				<p class="pages">Pages: 480</p>
+				<p class="yearwritten">Year Written: 2013</p>
+				<p class="publisher">Publisher: Doubleday</p>
+				<p class="genre">Genre: Mystery</p>
+				<p class="isbn">ISBN: 978-0-385-53785-8</p>
+				<p class="tags"><span>#DanBrown</span></p>
+				<div class="author-section">
+					<img src="path_to_author_profile_pic.jpg" alt="Author Name" class="author-profile-pic">
+					<h3 class="author-name">Author Name</h3>
+					<p class="author-story">Short story about the author...</p>
+					<a href="../../Authors/John Doe/JohnDoe.html" class="author-page-link">More about the author</a>
+					<!-- Other cool things -->
+					<div class="author-extras">
+						<p>Interesting Fact: The author has written over 10 bestsellers!</p>
+						<!-- Add more interesting facts or content here -->
+					</div>
+				</div>
 			</div>
 		</div>
 	</main>
