--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script src="script.js" defer></script>
 	<header>
 		<nav>
-			<a href="./index.html">Home</a> | 
+			<a href="index.html">Home</a> |
 			<a href="me.html">About Me</a>
 		</nav>
 		<input class="search-bar" type="search" placeholder="Search...">
@@ -30,6 +30,7 @@
 					<p class="publisher">Publisher: /</p>
 					<p class="genre">Genre: Mystery</p>
 					<p class="isbn">ISBN: 978-3-16-148410-0</p>
+					<p class="tags"><span>#SherlockHolmes</span><span>#Mystery</span></p>
 					
 				</div>
 			</div>
@@ -46,6 +47,7 @@
 					<p class="publisher">Publisher: Doubleday</p>
 					<p class="genre">Genre: Mystery</p>
 					<p class="isbn">ISBN: 978-0-385-53785-8</p>
+					<p class="tags"><span>#DanBrown</span><span>#Mystery</span><span>#Thriller</span></p>
 				</div>
 			</div>
 		<!-- 				Example Book
@@ -61,6 +63,7 @@
 					<p class="publisher">Publisher: PUBLISHER</p>
 					<p class="genre">Genre: GENRE</p>
 					<p class="isbn">ISBN: 123-3-45-678-9</p>
+					<p class="tags"><span>#Tag1</span><span>#Tag2</span></p>
 					
 				</div>
 			</div>
