Added a favicon and date reviewed

--- a/BookReviews/Inferno/inferno.html
+++ b/BookReviews/Inferno/inferno.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Book Review</title>
 	<link rel="stylesheet" href="../ReviewPage.css">
+	<link rel="icon" type="image/x-icon" href="logo.jpg">
 </head>
 <body>
 	<header>
@@ -30,6 +31,7 @@
 				<p class="rating">★★★★☆</p>
 				<p class="author">Author: Dan Brown</p>
 				<p class="reviewer">Reviewed by: Jane Doe</p>
+				<p class="date-reviewed">Date Reviewed: 2000-01-01</p>
 				<p class="pages">Pages: 480</p>
 				<p class="yearwritten">Year Written: 2013</p>
 				<p class="publisher">Publisher: Doubleday</p>
