--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Book Reviews</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="icon" type="image/x-icon" href="logo.jpg">
 </head>
 <body>
 		<script src="script.js" defer></script>
@@ -25,6 +26,7 @@
 					<p class="rating">★★★★★</p>
 					<p class="author">Author: Arthur Conan Doyle</p>
 					<p class="reviewer">Reviewed by: John Doe</p>
+					<p class="date-reviewed">Date Reviewed: 2024-01-01</p>
 					<p class="pages">Pages: 350</p>
 					<p class="yearwritten">Year Written: 1892</p>
 					<p class="publisher">Publisher: /</p>
@@ -42,6 +44,7 @@
 					<p class="rating">★★★★☆</p>
 					<p class="author">Author: Dan Brown</p>
 					<p class="reviewer">Reviewed by: Jane Doe</p>
+					<p class="date-reviewed">Date Reviewed: 2000-1-1</p>
 					<p class="pages">Pages: 480</p>
 					<p class="yearwritten">Year Written: 2013</p>
 					<p class="publisher">Publisher: Doubleday</p>
