Added giscus comments

--- a/BookReviews/Inferno/inferno.html
+++ b/BookReviews/Inferno/inferno.html
@@ -58,5 +58,6 @@
 			<p>© 2024 Kluizenaren All rights reserved.</p>
 		</div>
 	</footer>
+	<script src="../comment.js" ></script>
 </body>
 </html>
