Added switch between darks and lightmode

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Book Reviews</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="lightstyle.css">
 	<link rel="icon" type="image/x-icon" href="logo.jpg">
 </head>
 <body>
@@ -14,6 +14,7 @@
 			<a href="index.html">Home</a> |
 			<a href="me.html">About Me</a>
 		</nav>
+		<button id="theme-switcher">Switch Theme</button>
 		<input class="search-bar" type="search" placeholder="Search...">
 	</header>
 	<main>
