--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	<header>
 		<nav>
 			<a href="index.html">Home</a> |
-			<a href="me.html">About Me</a>
+			<a href="me.html">About Me</a> |
+			<a href="newsletter.html">Newsletter</a>
 		</nav>
 		<button id="theme-switcher">Switch Theme</button>
 		<input class="search-bar" type="search" placeholder="Search...">
